[package]
name = "vectune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
hashbrown = "0.14.3"
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
instant-distance = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
