[package]
name = "vectune"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
hashbrown = "0.14.3"
itertools = "0.12.1"
parking_lot = "0.12.1"
# kmeans = "0.2.1"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
byteorder = "1.5.0"
indicatif = "0.17.8"
# instant-distance = { version = "0.6.1", features = ["progress-bar"]}
instant-distance = { git = "https://github.com/ClankPan/instant-distance", rev = "94218c7", features = ["with-serde", "progress-bar"], package = "instant-distance"}
