
[package]
name = "exapmles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sift1m"
path = "src/bin/sift1m.rs"

[dependencies]
vectune = {path = "../vectune", features = ["progress-bar"]}
# vectune = {path = "../vectune", features = []}
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5.0"
indicatif = "0.17"